# palpo

./: .gitignore  Cargo.toml  README.md  README.zh.md  __item_temp.result.jsonl  _typos.toml  palpo-example.toml  palpo-required.toml  palpo.toml  run-sytest.sh  rustfmt.toml
crates/core/: Cargo.toml
crates/core-macros/: Cargo.toml
crates/core-macros/src/: events.rs  identifiers.rs  lib.rs  util.rs
crates/core-macros/src/events/: common.rs  enums.rs  event.rs  event_content.rs  event_enum.rs  event_enum_from_event.rs  event_parse.rs  event_type.rs  mod.rs
crates/core-macros/src/identifiers/: id_dst.rs
crates/core-macros/src/serde/: as_str_as_ref_str.rs  case.rs  debug_as_ref_str.rs  deserialize_from_cow_str.rs  display_as_ref_str.rs  enum_as_ref_str.rs  enum_from_string.rs  eq_as_ref_str.rs  ord_as_ref_str.rs  serialize_as_ref_str.rs  util.rs
crates/core/src/: auth_scheme.rs  authentication.rs  authorization.rs  client.rs  device.rs  directory.rs  encryption.rs  error.rs  events.rs  federation.rs  html.rs  http.rs  identifiers.rs  invite_permission_config.rs  lib.rs  media.rs  path_builder.rs  percent_encode.rs  power_levels.rs  presence.rs  push.rs  room.rs  room_version_rules.rs  sending.rs  serde.rs  signatures.rs  space.rs  state.rs  test_utils.rs  third_party.rs  third_party_invite.rs  time.rs  to_device.rs  user.rs  utils.rs  version.rs
crates/core/src/appservice/: event.rs  mod.rs  ping.rs  query.rs  third_party.rs
crates/core/src/client/: account.rs  appservice.rs  backup.rs  dehydrated_device.rs  device.rs  directory.rs  discovery.rs  filter.rs  http_header.rs  key.rs  membership.rs  message.rs  mod.rs  presence.rs  profile.rs  redact.rs  register.rs  relation.rs  room.rs  search.rs  server.rs  session.rs  space.rs  state.rs  tag.rs  third_party.rs  typing.rs  uiaa.rs  user.rs  user_directory.rs  voip.rs
crates/core/src/directory/: mod.rs  room_network_serde.rs
crates/core/src/doc/: rich_reply.md
crates/core/src/error/: auth.rs  kind.rs  kind_serde.rs  mod.rs
crates/core/src/events/: _custom.rs  beacon.rs  beacon_info.rs  call.rs  content.rs  direct.rs  do_not_disturb.rs  dummy.rs  emote.rs  encrypted.rs  enums.rs  file.rs  forwarded_room_key.rs  fully_read.rs  identity_server.rs  ignored_user_list.rs  image.rs  image_pack.rs  invite_permission_config.rs  kinds.rs  location.rs  marked_unread.rs  media_preview_config.rs  member_hints.rs  mod.rs  pdu.rs  poll.rs  presence.rs  push_rules.rs  reaction.rs  receipt.rs  relation.rs  room_key.rs  room_key_bundle.rs  room_key_request.rs  space_order.rs  state_key.rs  sticker.rs  tag.rs  typing.rs  (+3 more)
crates/core/src/federation/: README.md  authenticated_media.rs  authentication.rs  authorization.rs  backfill.rs  device.rs  directory.rs  discovery.rs  event.rs  key.rs  knock.rs  media.rs  membership.rs  mod.rs  openid.rs  query.rs  room.rs  space.rs  third_party.rs  transaction.rs
crates/core/src/html/: helpers.rs  matrix.rs  mod.rs  sanitizer_config.rs
crates/core/src/http_headers/: content_disposition.rs  mod.rs  rfc8187.rs
crates/core/src/identifiers/: base64_public_key.rs  base64_public_key_or_device_id.rs  client_secret.rs  crypto_algorithms.rs  device_id.rs  device_key_id.rs  event_id.rs  key_id.rs  key_name.rs  matrix_uri.rs  mod.rs  mxc_uri.rs  one_time_key_name.rs  room_alias_id.rs  room_id.rs  room_or_alias_id.rs  room_version_id.rs  server_name.rs  server_signing_key_version.rs  session_id.rs  signatures.rs  space_child_order.rs  transaction_id.rs  user_id.rs  voip_id.rs  voip_version_id.rs
crates/core/src/identity/: association.rs  authentication.rs  discovery.rs  invitation.rs  key.rs  lib.rs  lookup.rs  tos.rs
crates/core/src/media/: content.rs  mod.rs
crates/core/src/metadata/: matrix_version.rs  mod.rs  supported_versions.rs  tests.rs
crates/core/src/push/: action.rs  condition.rs  conditional_push_rule.rs  error.rs  iter.rs  mod.rs  patterned_push_rule.rs  predefined.rs  push_gateway.rs  push_rule.rs  pusher.rs  ruleset.rs  simple_push_rule.rs
crates/core/src/serde/: base64.rs  can_be_empty.rs  canonical_json.rs  cow.rs  json_string.rs  mod.rs  pdu_process_response.rs  raw_json.rs  strings.rs  test.rs
crates/core/src/signatures/: error.rs  functions.rs  keys.rs  mod.rs  signatures.rs  tests.rs  verification.rs
crates/core/src/state/: README.md  error.rs  event_auth.rs  events.rs  mod.rs  power_levels.rs  room_version.rs  state_event.rs  test_utils.rs  tests.rs
crates/data/: .env  Cargo.toml  diesel.toml
crates/data/migrations/2024-02-15-063543_main/: up.sql
crates/data/migrations/2025-04-16-053314_add_url_previews/: up.sql
crates/data/migrations/2025-04-18-051541_add_login_tokens/: up.sql
crates/data/migrations/2025-05-07-122248_add_room_lookup_servers/: up.sql
crates/data/migrations/2025-06-05-063543_main/: up.sql
crates/data/migrations/2025-12-04-131629-0000_synapse_admin_tables/: down.sql  up.sql
crates/data/migrations/2025-12-06-005421_create_event_phases/: up.sql
crates/data/src/: config.rs  error.rs  full_text_search.rs  lib.rs  macros.rs  media.rs  misc.rs  pool.rs  room.rs  schema.rs  sending.rs  user.rs
crates/identifiers-validation/: CHANGELOG.md  Cargo.toml
crates/identifiers-validation/src/: base64_public_key.rs  error.rs  key_id.rs  lib.rs  mxc_uri.rs  room_alias_id.rs  room_id.rs  server_signing_key_version.rs  user_id.rs  voip_version_id.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: identifiers.rs  lib.rs  util.rs
crates/server/: .env  Cargo.toml  palpo-example.toml  palpo.toml
crates/server-macros/: Cargo.toml
crates/server-macros/src/: admin.rs  cargo.rs  config.rs  git.rs  lib.rs  rustc.rs  utils.rs
crates/server/src/: admin.rs  appservice.rs  auth.rs  cjson.rs  config.rs  directory.rs  env_vars.rs  error.rs  event.rs  federation.rs  global.rs  hoops.rs  logging.rs  macros.rs  main.rs  media.rs  membership.rs  room.rs  routing.rs  schema.rs  sending.rs  signal.rs  signing_keys.rs  state.rs  sync_v3.rs  sync_v4.rs  sync_v5.rs  transaction_id.rs  uiaa.rs  user.rs  utils.rs  watcher.rs
(+639 files in other folders)
