[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.2"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
rust-version = "1.85"
description = """
Matrix server implementation
"""
homepage = "https://github.com/palpo-matrix-server/palpo"
repository = "https://github.com/palpo-matrix-server/palpo/palpo.git"
documentation = "https://docs.rs/palpo/"
readme = "./README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["http", "async", "web", "framework", "server"]
license = "Apache-2.0"

[workspace.dependencies]
palpo-core = { version = "0.0.2", path = "crates/core" }
palpo-macros = { version = "0.0.2", path = "crates/macros" }
palpo-data = { version = "0.0.2", path = "crates/data" }
palpo-identifiers-validation = { version = "0.0.2", path = "crates/identifiers-validation" }

rust-argon2 = "2.1.0"
anyhow = "1.0.44"
assert_matches2 = "0.1.0"
async-trait = "0.1.48"
as_variant = "1"
base64 = "0.22"
bcrypt = "0.17.0"
blurhash = "0.2"
bytes = "1.1.0"
byteorder = "1.5.0"
chksum = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.5.40", default-features = false }
config = "0.15.11"
cookie = "0.18.0"
cyborgtime = "2.1.1"
data-encoding = "2.5.0"
date_header = "1.0.5"
diesel = { version = "2.2", features = ["postgres", "serde_json", "chrono", "numeric", "r2d2"] }
diesel-async ={ version = "0.5.2"}
# diesel_full_text_search = { version = "2.2.0" }
diesel_migrations = "2"
dotenvy = "0.15.0"
ed25519-dalek = "2.1.1"
either = { version = "1.15.0", default-features = false }
fast32 = "1"
figment = "0.10.8"
futures-util = { version = "0.3.24", features = ["io"] }
form_urlencoded = "1"
globwalk = "0.9.0"
ipaddress = "0.1.3"
hickory-resolver = "0.25.1"
hyper-util = "0.1.14"
hmac = "0.12"
html5ever = "0.29.0"
http = "1"
image = "0.25"
indexmap = "2.10.0"
itertools = "0.14"
jsonwebtoken = { version = "9.1", default-features = false, features = ["use_pem"] }
js_option = "0.1.0"
konst = "0.3"
# ldap3 = { git = "https://github.com/palpo-matrix-server/ldap3", branch = "main", default-features = false, features = ["sync", "tls-rustls"] }
lru-cache = "0.1"
maplit = "1"
mime = "0.3.16"
mime-infer = "4.0.0"
path-slash = "0.2.1"
percent-encoding = "2"
phf = { version = "0.11.1", features = ["macros"] }
pkcs8 = "0.10.2"
pulldown-cmark = { version = "0.13.0", default-features = false }
rand = "0.9.0"
rand_core = "0.6.4"
regex = "1.6.0"
reqwest = { version = "0.12.20", features = ["json"] }
ring = "0.17.14"
salvo = { version = "0.79.0", features = ["jwt-auth", "oapi", "proxy", "serve-static", "sse", "cors", "rustls", "size-limiter"] }
sanitize-filename = "0.6.0"
scheduled-thread-pool = "0.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.118", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = { version = "1.0.140" }
serde_with = "3.0.0"
serde_yaml = { version = "0.9.32" }
serde_regex = { version = "1.1.0" }
smallvec = { version = "1.15.1" }
sha2 = "0.10.8"
sha1 = "0.10.6"
smallstr = "0.3"
strum = "0.27.1"
strum_macros = "0.27.1"
subslice = "0.2.3"
tempfile = "3.6.0"
textnonce = "1.0.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "parking_lot", "process"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tower-service = "0.3"
tokio-util = { version = "0.7.4", features = ["io"] }
tracing = { version = "0.1.36", features = ["release_max_level_debug", "attributes", "max_level_debug"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }
ulid = "1.1.0"
web-time = "1.1.0"
webpage = { version = "2.0.1", default-features = false }
wildmatch = "2.1.0"
