[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Chrislearn Young <chris@acroidea.com>"]
edition = "2024"
rust-version = "1.89"
description = """
Matrix server implementation
"""
homepage = "https://github.com/palpo-im/palpo"
repository = "https://github.com/palpo-im/palpo.git"
documentation = "https://docs.rs/palpo/"
readme = "./README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["http", "async", "web", "framework", "server"]
license = "Apache-2.0"

[workspace.dependencies]
palpo-core = { version = "0.2.0", path = "crates/core" }
palpo-core-macros = { version = "0.2.0", path = "crates/core-macros" }
palpo-data = { version = "0.2.0", path = "crates/data" }
palpo-identifiers-validation = { version = "0.2.0", path = "crates/identifiers-validation" }
palpo-server-macros = { version = "0.2.0", path = "crates/server-macros" }

rust-argon2 = "3.0.0"
ctor = "0.6.3"
anyhow = "1.0.100"
assert_matches2 = "0.1.0"
async-trait = "0.1.89"
as_variant = "1.3.0"
base64 = "0.22"
bcrypt = "0.18.0"
blurhash = "0.2"
bytes = "1.11.0"
byteorder = "1.5.0"
cargo_toml = "0.22.3"
chksum = "0.4.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", default-features = false }
config = "0.15.19"
cookie = "0.18.0"
core_affinity = "0.8.3"
cyborgtime = "2.1.1"
data-encoding = "2.10.0"
date_header = "1.0.5"
diesel = { version = "2.3.5" }
# diesel-async = { version = "0.6.1" }
# diesel_full_text_search = { version = "2.2.0" }
diesel_migrations = "2.3.1"
dotenvy = "0.15.0"
ed25519-dalek = "2.2.0"
either = { version = "1.15.0", default-features = false }
fast32 = "1.0.3"
figment = "0.10.8"
futures-util = { version = "0.3.24", features = ["io"] }
form_urlencoded = "1"
globwalk = "0.9.0"
ipaddress = "0.1.3"
hickory-resolver = "0.25.1"
hyper-util = "0.1.19"
hmac = "0.12"
html5ever = "0.37.1"
http = "1.4.0"
image = "0.25.9"
indexmap = "2.13.0"
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "use_pem",
] }
js_option = "0.2.0"
konst = "0.3.16"
# ldap3 = { git = "https://github.com/palpo-im/ldap3", branch = "main", default-features = false, features = ["sync", "tls-rustls"] }
language-tags = { version = "0.3.2", features = ["serde"] }
lru-cache = "0.1.2"
maplit = "1.0.2"
mime = "0.3.16"
mime-infer = "4.0.1"
# nix = "0.26.1"
path-slash = "0.2.1"
percent-encoding = "2"
phf = { version = "0.13.1", features = ["macros"] }
pkcs8 = "0.10.2"
proc-macro-crate = "3.4.0"
proc-macro2 = "1.0.105"
pulldown-cmark = { version = "0.13.0", default-features = false }
quote = "1.0.42"
rand = "0.9.2"
rand_core = "0.6.4"
reqwest-middleware = "0.5.0"
reqwest-retry = "0.9.0"
rustyline-async = { version = "0.4.7" }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "form"] }
ring = "0.17.14"
salvo = { version = "0.88.1", features = ["rustls"]}
sanitize-filename = "0.6.0"
scheduled-thread-pool = "0.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_html_form = "0.4.0"
serde_json = { version = "1.0.149" }
serde-saphyr = { version = "0.0.14" }
serde_regex = { version = "1.1.0" }
smallvec = { version = "1.15.1" }
sha2 = "0.10.8"
sha1 = "0.10.6"
strum = "0.27.2"
strum_macros = "0.27.2"
subslice = "0.2.3"
syn = "2.0.114"
tempfile = "3.24.0"
termimad = { version = "0.34.1", default-features = false }
textnonce = "1.0.0"
thiserror = "2.0.17"
tokio = { version = "1.46.1", features = ["macros", "parking_lot", "process"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = { version = "0.9.8", default-features = false }
tower-service = "0.3.3"
tracing = { version = "0.1.44", features = [
    "release_max_level_debug",
    "attributes",
    "max_level_debug",
] }
tracing-core = { version = "0.1.36" }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.8", default-features = false, features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
ulid = "1.1.0"
web-time = "1.1.0"
webpage = { version = "2.0.1", default-features = false }
wildmatch = "2.6.1"

[workspace.lints.clippy]
result_large_err = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"

[profile.release]
codegen-units = 1
lto = true
