[package]
categories.workspace = true
description = "Procedural macros used by the palpo core."
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "palpo-core-macros"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
palpo-identifiers-validation = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full", "visit"] }
toml = { workspace = true, features = ["parse"] }
