[package]
categories.workspace = true
description = "Procedural macros used by the palpo core."
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "palpo-core-macros"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
# Make the request and response macros expand internal derives they would
# usually emit in the `#[derive()]` list directly, such that Rust Analyzer's
# expand macro helper can render their output. Requires a nightly toolchain.
__internal_macro_expand = ["syn/visit-mut"]

[dependencies]
as_variant = { workspace = true }
palpo-identifiers-validation = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full", "visit"] }
toml = { workspace = true, features = ["parse"] }

[lints]
workspace = true
