[package]
name = "palpo-data"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# [features]
# manage = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
blurhash = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chksum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"] }
config = { workspace = true }
cookie = { workspace = true }
cyborgtime = { workspace = true }
data-encoding = { workspace = true }
diesel = { workspace = true, features = ["postgres", "serde_json", "chrono", "numeric", "r2d2"] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
fast32 = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }
futures-util = { workspace = true, features = ["io"] }
globwalk = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
hyper-util = { workspace = true, features = ["client"] }
image = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
lru-cache = { workspace = true }
maplit = { workspace = true }
mime = { workspace = true }
mime-infer = { workspace = true }
palpo-core = { workspace = true, features = ["unstable-msc2654"] }
path-slash = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
rust-argon2 = { workspace = true }
salvo = { workspace = true, features = ["jwt-auth", "logging", "oapi", "proxy", "serve-static", "sse", "size-limiter"] }
sanitize-filename = { workspace = true }
scheduled-thread-pool = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
textnonce = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "parking_lot", "process"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
tower-service = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug", "max_level_debug"] }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
ulid = { workspace = true }
url = { workspace = true }
uuid = { version = "1.1.2", features = ["v4"] }

[lints]
workspace = true
