[package]
name = "palpo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

# [features]
# manage = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
palpo-core = { workspace = true }
palpo-macros = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
cruet = { workspace = true }
async-trait = { workspace = true }
bcrypt = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
blurhash = { workspace = true }
bytes = { workspace = true }
chksum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"] }
config = { workspace = true }
cookie = { workspace = true }
data-encoding = { workspace = true }
dotenvy = { workspace = true }
diesel = { workspace = true, features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = { workspace = true }
fast32 = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }
futures-util = { workspace = true, features = ["io"] }
globwalk = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
image = { workspace = true }
jsonwebtoken = { workspace = true }
lru-cache = { workspace = true }
maplit = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
oauth2 = { workspace = true }
path-slash = { workspace = true }
# pkcs8 = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
rust-argon2 = { workspace = true }
salvo = { workspace = true, features = ["jwt-auth", "logging", "oapi", "proxy", "serve-static", "sse", "size-limiter"] }
sanitize-filename = { workspace = true }
scheduled-thread-pool = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde-aux = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
textnonce = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "parking_lot", "process"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true, features = ["release_max_level_debug", "max_level_debug"] }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true }
uuid = { version = "1.1.2", features = ["v4"] }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
ulid = { workspace = true }
# notify = "5.1.0"

# [patch.crates-io]
# salvo = { git = "https://github.com/salvo-rs/salvo.git" }
# salvo_core = { path = "D:/Soncai/salvo-rs/salvo/crates/core" }
# salvo_macros = { path = "D:/Kenorld/salvo-rs/salvo/macros" }
# salvo_extra = { path = "D:/Kenorld/salvo-rs/salvo/extra" }

# [profile.dev]
# debug = true
# codegen-units = 1
# incremental = true
# opt-level = 1
