[package]
name = "palpo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

# [features]
# manage = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctor = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
blurhash = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
cargo_toml = { workspace = true }
chksum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
config = { workspace = true }
core_affinity = { workspace = true }
cookie = { workspace = true }
cyborgtime = { workspace = true }
data-encoding = { workspace = true }
diesel = { workspace = true, features = [
    "postgres",
    "r2d2",
    "chrono",
    "serde_json",
] }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
either = { workspace = true, features = ["serde"] }
fast32 = { workspace = true }
figment = { workspace = true, features = ["env", "toml", "yaml", "json"] }
futures-util = { workspace = true, features = ["io"] }
globwalk = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
hyper-util = { workspace = true, features = ["client"] }
image = { workspace = true }
indexmap = { workspace = true }
ipaddress = { workspace = true }
itertools = { workspace = true }
jsonwebtoken = { workspace = true }
# ldap3 = { workspace = true }
lru-cache = { workspace = true }
maplit = { workspace = true }
mime = { workspace = true }
mime-infer = { workspace = true }
# nix = { workspace = true }
palpo-core = { workspace = true, features = [
    "markdown",
    "html",
    "html-matrix",
    "unstable-exhaustive-types",
    "unstable-extensible-events",
    "unstable-msc1767",
    "unstable-msc2448",
    "unstable-msc2545",
    "unstable-msc2654",
    "unstable-msc2666",
    "unstable-msc2747",
    "unstable-msc2867",
    "unstable-msc2870",
    "unstable-msc2965",
    "unstable-msc2967",
    "unstable-msc3061",
    "unstable-msc3202",
    "unstable-msc3230",
    "unstable-msc3245",
    "unstable-msc3245-v1-compat",
    "unstable-msc3246",
    "unstable-msc3266",
    "unstable-msc3381",
    "unstable-msc3401",
    "unstable-msc3488",
    "unstable-msc3489",
    "unstable-msc3551",
    "unstable-msc3552",
    "unstable-msc3553",
    "unstable-msc3554",
    "unstable-msc3618",
    "unstable-msc3723",
    "unstable-msc3814",
    "unstable-msc3843",
    "unstable-msc3927",
    "unstable-msc3930",
    "unstable-msc3931",
    "unstable-msc3932",
    "unstable-msc3954",
    "unstable-msc3955",
    "unstable-msc3956",
    "unstable-msc3983",
    "unstable-msc4075",
    "unstable-msc4095",
    "unstable-msc4108",
    "unstable-msc4121",
    "unstable-msc4125",
    "unstable-msc4140",
    "unstable-msc4143",
    "unstable-msc4171",
    "unstable-msc4191",
    "unstable-msc4186",
    "unstable-msc4203",
    "unstable-msc4230",
    "unstable-msc4268",
    "unstable-msc4274",
    "unstable-msc4278",
    "unstable-msc4306",
    "unstable-msc4308",
    "unstable-msc4310",
    "unstable-msc4319",
    "unstable-msc4359",
    "unstable-pdu",
    "unstable-unspecified",
] }
palpo-data = { workspace = true }
palpo-server-macros = { workspace = true }
path-slash = { workspace = true }
# pkcs8 = { workspace = true }
rand = { workspace = true }
rustyline-async = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
ring = { workspace = true }
rust-argon2 = { workspace = true }
salvo = { workspace = true, features = [
    "compression",
    "cors",
    "jwt-auth",
    "logging",
    "oapi",
    "proxy",
    "serve-static",
    "sse",
    "size-limiter",
] }
sanitize-filename = { workspace = true }
scheduled-thread-pool = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_regex = { workspace = true }
serde-saphyr = { workspace = true }
sha1 = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
termimad = { workspace = true }
textnonce = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "parking_lot", "process"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io"] }
toml = { workspace = true, features = ["serde"] }
tower-service = { workspace = true }
tracing = { workspace = true, features = [
    "release_max_level_debug",
    "max_level_debug",
] }
tracing-core = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
    "json",
    "tracing",
    "tracing-log",
] }
ulid = { workspace = true }
url = { workspace = true }
uuid = { version = "1.1.2", features = ["v4"] }
webpage = { workspace = true }
sha2 = {workspace = true}
# notify = "5.1.0"

[lints]
workspace = true

# [patch.crates-io]
# salvo = { git = "https://github.com/salvo-rs/salvo.git" }
# salvo_core = { path = "D:/Soncai/salvo-rs/salvo/crates/core" }
# salvo_macros = { path = "D:/Kenorld/salvo-rs/salvo/macros" }
# salvo_extra = { path = "D:/Kenorld/salvo-rs/salvo/extra" }

# [profile.dev]
# debug = true
# codegen-units = 1
# incremental = true
# opt-level = 1
